[project]
name = "youtube-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "ffmpeg>=1.4",
    "pytube>=15.0.0",
    "uvicorn>=0.34.2",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.4.30",
]
